Fixed vertical button spacing issue with buttons on mobile device

--- a/cover.css
+++ b/cover.css
@@ -161,3 +161,8 @@ body {
     width: 700px;
   }
 }
+
+.btn
+{
+    margin-bottom: 8px;
+}
